Updated footer copyright to Irem Dogancali

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </video>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 My Portfolio</p>
-    </footer>
+     <!-- Footer -->
+<footer>
+    <p>&copy; 2025 Irem Dogancali</p>
+</footer>
 
 </body>
 </html>
