--- a/index.html
+++ b/index.html
@@ -7,32 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Main Content -->
-    <section class="hero">
+    <div class="menu-container">
+        <button id="menu-toggle" class="menu-button">☰</button>
+        <nav id="sidebar" class="sidebar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <main>
         <h1>Welcome to My Portfolio</h1>
-        <p>Check out my latest work below.</p>
-
-        <!-- Placeholder Video -->
         <video controls>
             <source src="placeholder.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    </section>
-
-     <!-- Footer -->
-<footer>
-    <p>&copy; 2025 Irem Dogancali</p>
-</footer>
-
+        <p>Explore my work and get in touch!</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 Irem Dogancali</p>
+    </footer>
+    <script>
+        document.getElementById('menu-toggle').addEventListener('click', function() {
+            document.getElementById('sidebar').classList.toggle('open');
+        });
+    </script>
 </body>
 </html>
