Updated HTML & CSS with vaporwave theme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Irem Dogancali | Editor, Producer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,12 +18,18 @@
         </nav>
     </div>
     <main>
-        <h1>Welcome to My Portfolio</h1>
-        <video controls>
-            <source src="placeholder.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <p>Explore my work and get in touch!</p>
+        <h1>Irem Dogancali</h1>
+        <h2>Editor, Producer</h2>
+        <div class="video-container">
+            <video controls>
+                <source src="placeholder.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div class="button-container">
+            <a href="projects.html" class="button">Projects</a>
+            <a href="contact.html" class="button">Get in Touch</a>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 Irem Dogancali</p>
