Updated homepage layout and styles

--- a/index.html
+++ b/index.html
@@ -3,41 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Irem Dogancali | Editor, Producer</title>
+    <title>Irem Dogancali - Editor, Producer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="menu-container">
-        <button id="menu-toggle" class="menu-button">☰</button>
-        <nav id="sidebar" class="sidebar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
     <main>
         <h1>Irem Dogancali</h1>
         <h2>Editor, Producer</h2>
-        <div class="video-container">
-            <video controls>
-                <source src="placeholder.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
+        <video controls class="full-width-video">
+            <source src="placeholder.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div class="button-container">
-            <a href="projects.html" class="button">Projects</a>
-            <a href="contact.html" class="button">Get in Touch</a>
+            <a href="projects.html" class="custom-button">Projects</a>
+            <a href="contact.html" class="custom-button">Get in Touch</a>
         </div>
     </main>
     <footer>
         <p>&copy; 2025 Irem Dogancali</p>
     </footer>
-    <script>
-        document.getElementById('menu-toggle').addEventListener('click', function() {
-            document.getElementById('sidebar').classList.toggle('open');
-        });
-    </script>
 </body>
 </html>
