--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Updated index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,33 +8,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="menu-container">
-        <button id="menu-toggle" class="menu-button">☰</button>
-        <nav id="sidebar" class="sidebar">
-            <ul>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Get in Touch</a></li>
-            </ul>
-        </nav>
-    </div>
     <main>
-        <h1>Irem Dogancali <br> Editor, Producer</h1>
+        <h1>Irem Dogancali</h1>
+        <h2>Editor, Producer</h2>
+        
+        <!-- Embedded Vimeo Video -->
         <div class="video-container">
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/217581697?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Editing Reel"></iframe></div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
+            <iframe src="https://player.vimeo.com/video/217581697?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
+                title="Editing Reel"></iframe>
         </div>
+        
+        <!-- Navigation Buttons -->
         <div class="button-container">
-            <a href="projects.html" class="button">Projects</a>
-            <a href="contact.html" class="button">Get in Touch</a>
+            <a href="projects.html" class="nav-button">Projects</a>
+            <a href="contact.html" class="nav-button">Get in Touch</a>
         </div>
     </main>
-    <footer>
-        <p>&copy; 2025 Irem Dogancali</p>
-    </footer>
-    <script>
-        document.getElementById('menu-toggle').addEventListener('click', function() {
-            document.getElementById('sidebar').classList.toggle('open');
-        });
-    </script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
 </html>
