--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
-<!-- Updated index.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Irem Dogancali | Editor, Producer</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <body>
+    <div class="overlay"></div>  <!-- Grid overlay added here -->
     <main>
-        <h1>Irem Dogancali</h1>
+        <h1 class="glitch">Irem Dogancali</h1>
         <h2>Editor, Producer</h2>
-        
-        <!-- Embedded Vimeo Video -->
+
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/217581697?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
                 frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
                 title="Editing Reel"></iframe>
         </div>
-        
-        <!-- Navigation Buttons -->
+
         <div class="button-container">
             <a href="projects.html" class="nav-button">Projects</a>
             <a href="contact.html" class="nav-button">Get in Touch</a>
         </div>
     </main>
-    <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
-</html>
