--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Irem Dogancali | Editor, Producer</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <div class="overlay"></div>  <!-- Grid overlay added here -->
+    <div class="overlay"></div> <!-- Grid Overlay -->
     <main>
         <h1 class="glitch">Irem Dogancali</h1>
         <h2>Editor, Producer</h2>
@@ -15,4 +23,6 @@
             <a href="contact.html" class="nav-button">Get in Touch</a>
         </div>
     </main>
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
+</html>
