--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Irem Dogancali | Editor, Producer</title>
+    <title>irem dogancali | Editor | Producer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,13 +14,13 @@
 
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/217581697?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
-                frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
+                frameborder="50" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
                 title="Editing Reel"></iframe>
         </div>
 
         <div class="button-container">
-            <a href="projects.html" class="nav-button">Projects</a>
-            <a href="contact.html" class="nav-button">Get in Touch</a>
+            <a href="projects.html" class="nav-button">projects</a>
+            <a href="contact.html" class="nav-button">contact</a>
         </div>
     </main>
     <script src="https://player.vimeo.com/api/player.js"></script>
