--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>irem dogancali | Editor | Producer</title>
+    <title>irem dogancali | editor | producer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
 
         <div class="button-container">
             <a href="projects.html" class="nav-button">projects</a>
-            <a href="contact.html" class="nav-button">contact</a>
+            <a href="contact.html" class="nav-button">get in touch</a>
         </div>
     </main>
     <script src="https://player.vimeo.com/api/player.js"></script>
