--- a/index.html
+++ b/index.html
@@ -3,24 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>irem dogancali | editor | producer</title>
+    <title>Irem Dogancali | Editor, Producer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="overlay"></div> <!-- Grid Overlay -->
+    
+    <div class="portal-container">
+        <div class="title-bar">
+            <span class="glitch-text">ＡＩＩ．ＥＸＥ</span>
+            <span class="emoticon">(>.<)</span>
+        </div>
+        <div class="scan-line"></div>
+        <div id="scene-container"></div>
+        <div class="status-bar">
+            <span>ＭＯＯＤ_ＳＹＳＴＥＭ</span>
+            <span class="emoticon-status">(>.<)</span>
+        </div>
+    </div>
+
     <main>
         <h1 class="glitch">Irem Dogancali</h1>
         <h2>Editor, Producer</h2>
 
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/217581697?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
-                frameborder="50" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
                 title="Editing Reel"></iframe>
         </div>
 
         <div class="button-container">
-            <a href="projects.html" class="nav-button">projects</a>
-            <a href="contact.html" class="nav-button">get in touch</a>
+            <a href="projects.html" class="nav-button">Projects</a>
+            <a href="contact.html" class="nav-button">Get in Touch</a>
         </div>
     </main>
     <script src="https://player.vimeo.com/api/player.js"></script>
