--- a/projects.html
+++ b/projects.html
@@ -1,19 +1,16 @@
-<!-- projects.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | Irem Dogancali</title>
+    <title>projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="overlay"></div>
-    <main>
-        <h1 class="glitch">Projects</h1>
-        <p>Coming soon...</p>
-        <a href="index.html" class="nav-button">Back to Home</a>
-    </main>
-    <script src="script.js"></script>
+    <div class="container">
+        <h1>projects</h1>
+        <p>This page is under construction. Check back soon!</p>
+        <a href="index.html" class="nav-button">take me back</a>
+    </div>
 </body>
 </html>
