--- a/projects.html
+++ b/projects.html
@@ -3,14 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projects</title>
+    <title>Projects | Irem Dogancali</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>projects</h1>
-        <p>This page is under construction. Check back soon!</p>
-        <a href="index.html" class="nav-button">take me back</a>
-    </div>
+
+    <main class="page-wrapper">
+        
+        <!-- Header -->
+        <header class="header-minimal">
+            <div>
+                <h1>projects</h1>
+                <h2>selected editorial work</h2>
+            </div>
+            <a href="index.html" class="btn-link">← back home</a>
+        </header>
+
+        <!-- The Grid -->
+        <section class="grid-gallery">
+            
+            <!-- Project 1 -->
+            <a href="https://vimeo.com/217581697" target="_blank" class="project-item">
+                <!-- Replace src with actual thumbnails -->
+                <img src="https://placehold.co/600x400/eee/31343C" alt="Commercial Reel" class="project-thumb">
+                <div class="project-details">
+                    <h3>Commercial Reel '24</h3>
+                    <p>Editor • Premiere Pro</p>
+                </div>
+            </a>
+
+            <!-- Project 2 -->
+            <a href="#" class="project-item">
+                <img src="https://placehold.co/600x400/eee/31343C" alt="Narrative Film" class="project-thumb">
+                <div class="project-details">
+                    <h3>The Long Wait</h3>
+                    <p>Producer • Narrative</p>
+                </div>
+            </a>
+
+            <!-- Project 3 -->
+            <a href="#" class="project-item">
+                <img src="https://placehold.co/600x400/eee/31343C" alt="Music Video" class="project-thumb">
+                <div class="project-details">
+                    <h3>Music Video: Echoes</h3>
+                    <p>Editor • Colorist</p>
+                </div>
+            </a>
+             <!-- Project 4 -->
+             <a href="#" class="project-item">
+                <img src="https://placehold.co/600x400/eee/31343C" alt="Music Video" class="project-thumb">
+                <div class="project-details">
+                    <h3>Documentary Short</h3>
+                    <p>Assistant Editor</p>
+                </div>
+            </a>
+
+        </section>
+
+    </main>
+
 </body>
 </html>
