--- a/msg.html
+++ b/msg.html
@@ -18,6 +18,21 @@
         </div>
     </nav>
 
+    <!-- HAMBURGER MENU (For Mobile) -->
+        <button class="mobile-menu-toggle" aria-label="Open Menu">
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+        </button>
+    </nav>
+
+    <!-- MOBILE MENU OVERLAY -->
+    <div class="mobile-nav-overlay">
+        <a href="index.html#work" class="mobile-nav-link">Work</a>
+        <a href="index.html#contact" class="mobile-nav-link">Contact</a>
+        <a href="index.html" class="mobile-nav-link">Home</a>
+    </div>
+
     <main class="project-page-wrapper">
         
         <!-- VIDEO PLAYER -->
