--- a/flf.html
+++ b/flf.html
@@ -13,6 +13,7 @@
         <a href="index.html" style="font-weight: 900; font-size: 1.2rem;">ID</a>
         
         <div class="nav-container" style="margin-top:0;">
+            <a href="index.html#work" class="nav-button">← back</a> 
             <a href="index.html#work" class="nav-button">work</a>
             <a href="index.html#contact" class="nav-button">contact</a>
         </div>
@@ -43,12 +44,13 @@
                 - controls=1: Shows player controls.
                 - modestbranding=1: Minimal YouTube logo.
             -->
-            <iframe src="https://www.youtube.com/embed/aahZJZlYhXw?rel=0&controls=1&modestbranding=1" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    allowfullscreen>
-            </iframe>
+        <iframe width="602" height="439" 
+            src="https://www.youtube.com/embed/aahZJZlYhXw?list=RDaahZJZlYhXw" 
+            title="MADDIE - Flirty Little Fling (Official Music Video)" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen>
+        </iframe>
         </div>
 
 
