--- a/reel.html
+++ b/reel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commercial Reel | Irem Dogancali</title>
+    <title>Post-Production Reel | Irem Dogancali</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
         <a href="index.html" style="font-weight: 900; font-size: 1.2rem;">ID</a>
         
         <div class="nav-container" style="margin-top:0;">
+            <a href="index.html#work" class="nav-button">← back</a> 
             <a href="index.html#work" class="nav-button">work</a>
             <a href="index.html#contact" class="nav-button">contact</a>
         </div>
@@ -58,13 +59,11 @@
                     ← back to projects
                 </a>
                 
-                <h1>commercial reel '24</h1>
+                <h1>post-production reel 2026</h1>
                 <p>
-                    A fast-paced montage featuring selected works from my commercial portfolio. 
+                    A fast-paced montage featuring selected works from my portfolio. 
                     This reel highlights my ability to cut for rhythm and impact, blending sound design 
                     with visual storytelling to keep engagement high across varying formats.
-                    <br><br>
-                    Includes spots for automotive, fashion, and lifestyle brands.
                 </p>
             </div>
 
